--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
+# Byte-compiled / cache
 __pycache__/
+*.pyc
+
+# Logs
+*.log
+logs/
+
+# Environment variables
+.env
+
+# Editor settings
+.vscode/
+.DS_Store
